tests/snapshots/tests__ranges@sample-1.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, Some(range))"

---
local foo = bar

local bar   =     baz    
