tests/snapshots/tests__sort_requires@basic.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local ah = require("a")
local bee = require("b")

print("hello world")

