tests/snapshots/tests__sort_requires@dependency.lua.snap
---
source: tests/tests.rs
assertion_line: 56
expression: format(&contents)

---
local parent = script.Parent
local aaa = require(parent.Script)
local bee = require("aaa")
local cee = require(parent.Cee)
local x = foo()

print("hello world")

