tests/snapshots/tests__sort_requires@ignore-multi-require.lua.snap
---
source: tests/tests.rs
expression: "format_code(&contents,\n        Config::default().with_sort_requires(SortRequiresConfig::default().set_enabled(true)),\n        None, OutputVerification::None).unwrap()"
---
local c = require("c")
local b, a = require("b"), require("a")

